@@ -9,7 +9,7 @@
 	#////////////////////////////////////
 	#
 	# Info:
-	# - Filename: /{DietPi,boot}/dietpi/dietpi-config
+	# - Location: /{DietPi,boot}/dietpi/dietpi-config
 	#
 	# Usage:
 	# dietpi-config iMENUINDEX iEXITONBACK
@@ -616,7 +616,7 @@ A long (or insufficiently manufactured) cable may required a higher boost settin
 
 			elif (( $G_WHIP_RETURNED_VALUE == 14 )); then
 
-				/DietPi/dietpi/func/dietpi-led_control
+				/DietPi/dietpi/dietpi-led_control
 
 			elif (( $G_WHIP_RETURNED_VALUE == 16 )); then
 
