@@ -9,7 +9,7 @@
 	#////////////////////////////////////
 	#
 	# Info:
-	# - Filename: /{DietPi,boot}/dietpi/func/dietpi-banner
+	# - Location: /{DietPi,boot}/dietpi/func/dietpi-banner
 	# - Checks /DietPi/dietpi/.update_available
 	#
 	# Usage:
@@ -154,16 +154,13 @@ $GREEN_LINE"
 
 	Print_Credits(){
 
-		echo -e " ${aCOLOUR[2]}DietPi Team     : MichaIng (lead), Daniel Knight (founder)"
+		echo -e " ${aCOLOUR[2]}DietPi Team     : MichaIng (lead), Daniel Knight (founder), Joulinar (support)"
 
 		[[ -f '/DietPi/dietpi/.prep_info' ]] && mawk 'NR==1 {sub(/^0$/,"DietPi Core Team");a=$0} NR==2 {print " Image           : "a" (pre-image: "$0")"}' /DietPi/dietpi/.prep_info
 
 		echo ' Web             : https://dietpi.com | https://twitter.com/dietpi_
  Patreon Legends : Bryce
  Donate          : https://dietpi.com/#donate'
-
-		local image_additional_credits=$(mawk 'NR==8' /DietPi/dietpi/.hw_model 2>&1)
-		[[ $image_additional_credits ]] && echo " Device image possible thanks to: $image_additional_credits"
 
 		echo -e " DietPi Hosting  : Powered by https://myvirtualserver.com$COLOUR_RESET\n"
 
