@@ -84,8 +84,8 @@ _EOF_
 	# Device details
 	#	NB: https://github.com/MichaIng/DietPi/blob/dev/dietpi/func/dietpi-obtain_hw_model
 	# - Declare
-	G_HW_MODEL=${G_HW_MODEL:--1}
-	G_HW_MODEL_DESCRIPTION=${G_HW_MODEL_DESCRIPTION:-NULL}
+	G_HW_MODEL=${G_HW_MODEL:-22}
+	G_HW_MODEL_DESCRIPTION=${G_HW_MODEL_DESCRIPTION:-Generic Device}
 	G_HW_ARCH=${G_HW_ARCH:-0}
 	G_HW_ARCH_DESCRIPTION=$(uname -m)
 	G_HW_CPUID=${G_HW_CPUID:-0}
@@ -505,7 +505,7 @@ $(ps f -eo pid,user,tty,cmd | grep -i '[d]ietpi')"; then
 	alias dietpi-explorer='/DietPi/dietpi/dietpi-explorer'
 	alias dietpi-banner='/DietPi/dietpi/func/dietpi-banner 2'
 	alias dietpi-justboom='/DietPi/dietpi/misc/dietpi-justboom'
-
+	alias dietpi-led_control='/DietPi/dietpi/dietpi-led_control'
 	alias cpu='/DietPi/dietpi/dietpi-cpuinfo'
 
 	# - 1337 moments ;)
