@@ -8,6 +8,7 @@
 	#////////////////////////////////////
 	#
 	# Info:
+	# - Location: /{DietPi,boot}/dietpi/func/dietpi-obtain_hw_model
 	# - Generates /DietPi/dietpi/.hw_model
 	# - Called from /DietPi/dietpi/preboot
 	#
@@ -90,7 +91,7 @@
 	# ---- Line 7 ----
 	# G_HW_ARCH_DESCRIPTION
 	# ---- Line 8 ----
-	# IMAGE_ADDITIONAL_CREDITS (eg: Meveric)
+	# IMAGE_ADDITIONAL_CREDITS (not in use, doubles with .prep_info)
 	# ---- Line 9 ---- SoC
 	# G_HW_CPUID 0 Not set
 	# G_HW_CPUID 1 Allwinner H3
@@ -119,14 +120,13 @@
 
 	FP_G_HW_MODEL_INDENTIFIER='/etc/.dietpi_hw_model_identifier'
 
-	G_HW_MODEL=-1
-	G_HW_MODEL_DESCRIPTION='Unknown Device'
+	G_HW_MODEL=22
+	G_HW_MODEL_DESCRIPTION='Generic Device'
 	G_DISTRO=0
 	ROOTFS_DEVICE_PATH=$(findmnt -no SOURCE /)
 	HW_UUID=0
 	G_HW_ARCH=0
 	G_HW_ARCH_DESCRIPTION=$(uname -m)
-	IMAGE_ADDITIONAL_CREDITS=''
 	G_HW_CPUID=0
 	HW_ONBOARD_WIFI=0
 
@@ -744,12 +744,6 @@
 				G_HW_MODEL_DESCRIPTION='OrangePi PC'
 				G_HW_CPUID=1
 
-			# Generic device (eg: unknown to DietPi)
-			elif (( $G_HW_MODEL == 22 )); then
-
-				G_HW_MODEL_DESCRIPTION='Generic Device'
-				IMAGE_ADDITIONAL_CREDITS='You!'
-
 			# x86_64 PC
 			elif (( $G_HW_MODEL == 21 )); then
 
@@ -765,38 +759,38 @@
 
 				G_HW_MODEL_DESCRIPTION='Odroid N2'
 				G_HW_CPUID=4
-				#IMAGE_ADDITIONAL_CREDITS='Meveric'
 
 			# Odroid N1
 			elif (( $G_HW_MODEL == 14 )); then
 
 				G_HW_MODEL_DESCRIPTION='Odroid N1'
 				G_HW_CPUID=3
-				#IMAGE_ADDITIONAL_CREDITS='Meveric'
 
 			# Odroid U3
 			elif (( $G_HW_MODEL == 13 )); then
 
 				G_HW_MODEL_DESCRIPTION='Odroid U3'
-				#IMAGE_ADDITIONAL_CREDITS='Meveric'
 
 			# Odroid C2
 			elif (( $G_HW_MODEL == 12 )); then
 
 				G_HW_MODEL_DESCRIPTION='Odroid C2'
-				IMAGE_ADDITIONAL_CREDITS='Meveric'
 
 			# Odroid XU3/XU4/HC1/HC2
 			elif (( $G_HW_MODEL == 11 )); then
 
 				G_HW_MODEL_DESCRIPTION='Odroid XU3/XU4/HC1/HC2'
-				IMAGE_ADDITIONAL_CREDITS='Meveric'
 
 			# Odroid C1
 			elif (( $G_HW_MODEL == 10 )); then
 
 				G_HW_MODEL_DESCRIPTION='Odroid C1'
-				#IMAGE_ADDITIONAL_CREDITS='Meveric'
+
+			# Unknown hardware ID, revert to "Generic Device"
+			elif [[ $G_HW_MODEL != 22 ]]; then
+
+				G_HW_MODEL=22
+				echo $G_HW_MODEL > $FP_G_HW_MODEL_INDENTIFIER
 
 			fi
 
@@ -805,6 +799,11 @@
 
 			# Grab hardware description from /proc/cpuinfo revision code
 			RPi_BoardInfo
+
+		# No hardware identifier and no Raspbian, revert to "Generic Device"
+		else
+
+			echo $G_HW_MODEL > $FP_G_HW_MODEL_INDENTIFIER	
 
 		fi
 
@@ -873,7 +872,7 @@ $ROOTFS_DEVICE_PATH
 $HW_UUID
 $G_HW_ARCH
 $G_HW_ARCH_DESCRIPTION
-$IMAGE_ADDITIONAL_CREDITS
+
 $G_HW_CPUID
 $HW_ONBOARD_WIFI" > /DietPi/dietpi/.hw_model
 
