@@ -2213,6 +2213,23 @@ _EOF_
 
 			fi
 			#-------------------------------------------------------------------------------
+			# Translate old DietPi-LED_control settings into new udev rules, remove old config and script location: https://github.com/MichaIng/DietPi/pull/3397
+			if [[ -f '/DietPi/dietpi/.dietpi-led_control' ]]; then
+
+				G_DIETPI-NOTIFY 2 'Translating old DietPi-LED_control settings into new udev rules'
+				local led trigger
+				while read -r led trigger
+				do
+
+					>> /etc/udev/rules.d/dietpi-led_control.rules
+					G_CONFIG_INJECT "SUBSYSTEM==\"leds\", KERNEL==\"$led\"" "SUBSYSTEM==\"leds\", KERNEL==\"$led\", ACTION==\"add\", ATTR{trigger}=\"$trigger\"" /etc/udev/rules.d/dietpi-led_control.rules
+
+				done < /DietPi/dietpi/.dietpi-led_control
+
+			fi
+			G_DIETPI-NOTIFY 2 'Removing old DietPi-LED_control config and script location'
+			rm -fv /{DietPi,boot}/dietpi/{.,func/}dietpi-led_control
+			#-------------------------------------------------------------------------------
 			# Sparky SBC: Update kernel/drivers
 			if (( $G_HW_MODEL == 70 )); then
 
