@@ -218,6 +218,20 @@ Package: wireguard wireguard-dkms wireguard-tools\nPin: release n=bullseye\nPin-
 
 	fi
 	#-------------------------------------------------------------------------------
+	# Pre-patch 20: Convert .hw_model additional credits line to .prep_info pre-image: https://github.com/MichaIng/DietPi/pull/3397
+	if (( $G_DIETPI_VERSION_SUB < 29 )); then
+
+		if [[ ! -f '/DietPi/dietpi/.prep_info' && -f '/DietPi/dietpi/.hw_model' && $(mawk 'NR==8' /DietPi/dietpi/.hw_model) ]]; then
+
+			cat << _EOF_ > /DietPi/dietpi/.prep_info
+0
+$(mawk 'NR==8' /DietPi/dietpi/.hw_model)
+_EOF_
+
+		fi
+
+	fi
+	#-------------------------------------------------------------------------------
 	# Finished
 	exit 0
 	#-------------------------------------------------------------------------------
