@@ -9,31 +9,31 @@
 	#////////////////////////////////////
 	#
 	# Info:
-	# - Filename: /DietPi/dietpi/preboot
+	# - Location: /{DietPi,boot}/dietpi/preboot
 	# - Activates on boot from dietpi-preboot.service, runs before dietpi-boot.service and networking
 	#////////////////////////////////////
-
-	# Import DietPi-Globals --------------------------------------------------------------
-	/DietPi/dietpi/func/dietpi-obtain_hw_model # Runs every boot to allow e.g. switching SDcards between devices and to be failsafe
-	. /DietPi/dietpi/func/dietpi-globals
-	G_PROGRAM_NAME='DietPi-PreBoot'
-	G_INIT
-	# Import DietPi-Globals --------------------------------------------------------------
 
 	#/////////////////////////////////////////////////////////////////////////////////////
 	# Main Loop
 	#/////////////////////////////////////////////////////////////////////////////////////
 	#-----------------------------------------------------------------------------------
-	# Apply DietPi CPU governor and settings
-	G_THREAD_START /DietPi/dietpi/func/dietpi-set_cpu
+	# RPi
+	if [[ ! -f '/etc/.dietpi_hw_model_identifier' ]]; then
 
-	# Apply LED triggers if set
-	G_THREAD_START /DietPi/dietpi/func/dietpi-led_control 1
+		# Disable video output on RPi when headless mode has been chosen
+		grep -q '^[[:blank:]]*AUTO_SETUP_HEADLESS=1' /DietPi/dietpi.txt && tvservice -o
 
-	# Disable video output on RPi when headless mode has been chosen
-	(( $G_HW_MODEL < 10 )) && grep -q '^[[:blank:]]*AUTO_SETUP_HEADLESS=1' /DietPi/dietpi.txt && tvservice -o
+		# Force hardware info reload to allow SDcard swapping
+		/DietPi/dietpi/func/dietpi-obtain_hw_model
+
+	fi
+
+	# Obtain hardware info if missing
+	[[ -f '/DietPi/dietpi/.hw_model' ]] || /DietPi/dietpi/func/dietpi-obtain_hw_model
+
+	# Apply CPU governor and settings
+	/DietPi/dietpi/func/dietpi-set_cpu
 	#-----------------------------------------------------------------------------------
-	G_THREAD_WAIT
 	exit
 	#-----------------------------------------------------------------------------------
 }
